--- a/.travis.yml
+++ b/.travis.yml
@@ -45,11 +45,11 @@ before_install:
 
 install:
   - pip install coverage pep8 python-coveralls
-  - cat requirements.txt | xargs -n 1 -L 1 pip install
+  # - cat requirements.txt | xargs -n 1 -L 1 pip install
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
 script:
-  - nosetests -sv --with-coverage --cover-package=smac
+  - nosetests -sv --with-coverage --cover-package=hpolib
 after_success:
   - coveralls
