--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_install:
 
 install:
   - pip install coverage pep8 python-coveralls
-  # - cat requirements.txt | xargs -n 1 -L 1 pip install
+  - cat requirements.txt | xargs -n 1 -L 1 pip install
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
