--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,12 @@
 language: python
+os: linux
 
 matrix:
 
   include:
-  - os: linux
-    env: PYTHON_VERSION="3.4" MINICONDA_URL="https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh"
-  - os: linux
-    env: PYTHON_VERSION="3.5" COVERAGE="true" MINICONDA_URL="https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh"
+  - env: PYTHON_VERSION="3.4"
+  - env: PYTHON_VERSION="3.5"
 
-  # Set language to generic to not break travis-ci
-  # https://github.com/travis-ci/travis-ci/issues/2312#issuecomment-195620855
-  # so far, this issue is still open and there is no good solution
-  # python will then be installed by anaconda
-  - os: osx
-    sudo: required
-    language: generic
-    env: PYTHON_VERSION="3.4" MINICONDA_URL="https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh"
-  - os: osx
-    sudo: required
-    language: generic
-    env: PYTHON_VERSION="3.5" MINICONDA_URL="https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh"
 
 cache:
   directories:
@@ -32,7 +19,7 @@ before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 
 before_install:
-  - wget $MINICONDA_URL -O miniconda.sh
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - if [[ `which conda` ]]; then echo 'Conda installation successful'; else exit 1; fi
