--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - conda update --yes conda
   - conda create -n testenv --yes python=$TRAVIS_PYTHON_VERSION pip wheel nose
   - source activate testenv
-  - conda install --yes gcc
+  - conda install --yes gcc swig
   - echo "Using GCC at "`which gcc`
   - export CC=`which gcc`
 
@@ -32,6 +32,9 @@ install:
   # Inverse grep allows comments in requirements file
   - cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
   - cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
+  # Install auto-sklearn
+  - curl https://raw.githubusercontent.com/automl/auto-sklearn/development/requirements.txt | xargs -n 1 -L 1 pip install
+  - pip install git+https://github.com/automl/auto-sklearn@development
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
