--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ dependencies:
     - sudo -E apt-get -yq remove texlive-binaries --purge
     - sudo apt-get update
     - sudo apt-get install libatlas-dev libatlas3gf-base
-    - sudo apt-get install build-essential python-dev python-setuptools
+    - sudo apt-get install build-essential python3-dev python3-setuptools
     # upgrade pip and wheel to allow for fast installation
     - pip install wheel pip --upgrade
     # install numpy first as it is a compile time dependency for other packages
