--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 machine:
   python:
-    version: 3.4.3
+    version: 3.5
 
   environment:
     # The github organization or username of the repository which hosts the
@@ -23,8 +23,18 @@ dependencies:
     # from scikit-learn contrib
     - sudo -E apt-get -yq remove texlive-binaries --purge
     - sudo apt-get update
-    - sudo apt-get install libatlas-dev libatlas3gf-base
-    - sudo apt-get install build-essential python3-dev python3-setuptools
+    # Install a conda environment
+    - deactivate
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - if [[ `which conda` ]]; then echo 'Conda installation successful'; else exit 1; fi
+    - conda update --yes conda
+    - conda create -n testenv --yes python=3.5 pip wheel nose
+    - source activate testenv
+    - conda install --yes gcc
+    - echo "Using GCC at "`which gcc`
+    - export CC=`which gcc`
     # upgrade pip and wheel to allow for fast installation
     - pip install wheel pip --upgrade
     # install numpy first as it is a compile time dependency for other packages
