--- a/circle.yml
+++ b/circle.yml
@@ -20,11 +20,14 @@ dependencies:
 
   # Various dependencies
   pre:
+    # Get rid of existing virtualenvs on circle ci as they conflict with conda.
+    # Trick found here:
+    # https://discuss.circleci.com/t/disable-autodetection-of-project-or-application-of-python-venv/235/10
+    - cd && rm -rf ~/.pyenv && rm -rf ~/virtualenvs
     # from scikit-learn contrib
     - sudo -E apt-get -yq remove texlive-binaries --purge
     - sudo apt-get update
     # Install a conda environment
-    - deactivate
     - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
@@ -68,6 +71,10 @@ deployment:
     branch: development
     commands:
       - bash ci_scripts/push_doc.sh 'dev'
+  circle-ci:
+    branch: circle-ci
+    commands:
+      - bash ci_scripts/push_doc.sh 'circle-ci'
 general:
   # Open the doc to the API
   artifacts:
@@ -78,3 +85,4 @@ general:
     only:
        - development
        - master
+       - circle-ci
