--- a/circle.yml
+++ b/circle.yml
@@ -58,6 +58,8 @@ dependencies:
     - python setup.py clean
     - python setup.py develop
     - set -o pipefail && cd doc && make html 2>&1 | tee ~/log.txt
+    - pwd
+    - ls
 test:
   # Grep error on the documentation
   override:
