--- a/circle.yml
+++ b/circle.yml
@@ -60,6 +60,7 @@ dependencies:
     - set -o pipefail && cd doc && make html 2>&1 | tee ~/log.txt
     - pwd
     - ls
+    - ls doc
 test:
   # Grep error on the documentation
   override:
