MAINT fix unit tests/update docs for missing package

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ before_install:
 
 install:
   - pip install coverage pep8 python-coveralls
-  - cat requirements.txt | xargs -n 1 -L 1 pip install
+  # Inverse grep allows comments in requirements file
+  - cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
+  - cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
