--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - export CC=`which gcc`
 
 install:
-  - pip install coverage pep8 python-coveralls
+  - pip install coverage pep8 codecov
   # Inverse grep allows comments in requirements file
   - cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
   - cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
@@ -37,4 +37,4 @@ install:
 script:
   - nosetests -sv --with-coverage --cover-package=hpolib
 after_success:
-  - coveralls
+  - codecov
