--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 unittest2
 nose
 setuptools
-
 six
-
 numpy>=1.9.0
-scipy>=0.14.1
+scipy>=0.18
 matplotlib
-
 theano
 lasagne
 scikit-learn
 ConfigSpace
+mock
+liac-arff>=2.1.0
+xmltodict
+requests
+nbformat
+git+https://github.com/openml/openml-python.git@develop
