--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+configparser
 unittest2
 nose
 setuptools
@@ -8,8 +9,10 @@ numpy>=1.9.0
 scipy>=0.14.1
 matplotlib
 
-theano
-lasagne
+# We need lasagne 0.2dev1 + corresponding theano version
+theano==0.8.2
+git+https://github.com/Lasagne/Lasagne.git@master
+
 # Fix this for now to be compatible with autosklearn
-scikit-learn==0.17.1
+scikit-learn
 ConfigSpace
