--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,15 @@ sudo: false
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 
+
+addons:
+  apt:
+    packages:
+    - libatlas3gf-base
+    - libatlas-dev
+    - liblapack-dev
+    - gfortran
+
 before_install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - bash miniconda.sh -b -p $HOME/miniconda
