--- a/circle.yml
+++ b/circle.yml
@@ -50,7 +50,7 @@ dependencies:
     - sudo -E apt-get -yq update
     - sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install dvipng texlive-latex-base texlive-latex-extra
     # finally install the requirements of the package to allow autodoc
-    - cat requirements.txt | xargs -n 1 -L 1 pip install
+    - cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
 
   # The --user is needed to let sphinx see the source and the binaries
   # The pipefail is requested to propagate exit code
