--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ matplotlib
 theano==0.8.2
 git+https://github.com/Lasagne/Lasagne.git@master
 
-scikit-learn
+scikit-learn>=0.18.1
 ConfigSpace>=0.3.3
 
 requests
