--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,10 @@ matplotlib
 theano==0.8.2
 git+https://github.com/Lasagne/Lasagne.git@master
 
-scikit-learn>=0.18.1
+scikit-learn>=0.18.1,<0.19.0
 ConfigSpace>=0.3.3
 
 requests
 xmltodict
 liac-arff>=2.1.1
-git+https://github.com/openml/openml-python
+git+https://github.com/openml/openml-python@develop
