--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,10 @@ before_install:
 install:
   - pip install coverage pep8 codecov
   # Inverse grep allows comments in requirements file
-  - cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
-  - cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
+  #- cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
+  #- cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
+  - pip install -r requirements.txt
+  - pip install -r optional-requirements.txt
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
