--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ scikit-learn>=0.19.0,<0.20.0
 liac-arff>=2.1.1
 Cython
 ConfigSpace>=0.4.0
-git+https://github.com/openml/openml-python@develop
+openml
