--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - if [[ `which conda` ]]; then echo 'Conda installation successful'; else exit 1; fi
   - conda update --yes conda
-  - conda create -n testenv --yes python=$TRAVIS_PYTHON_VERSION pip wheel nose gxx_linux-64 gcc_linux-64 swig
+  - conda create -n testenv --yes python=$TRAVIS_PYTHON_VERSION pip wheel nose gxx_linux-64 gcc_linux-64 swig blas
   - source activate testenv
 
 install:
