--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,8 @@ install:
   # Temporarily pin the numpy version for travis-ci
   - pip install "numpy<1.15"
   # Inverse grep allows comments in requirements file
-  #- cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
-  #- cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
-  - pip install -r requirements.txt
-  - pip install -r optional-requirements.txt
+  - cat requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
+  - cat optional-requirements.txt | grep -v '#' | xargs -n 1 -L 1 pip install
   - python setup.py install
 
 # command to run tests, e.g. python setup.py test
