--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-configparser
-requests
-xmltodict
-setuptools
-six
-numpy>=1.9.0
+cython
 scipy>=0.14.1
+numpy>=1.9.0
 matplotlib
 scikit-learn>=0.19.0,<0.20.0
 liac-arff>=2.1.1
-Cython
 ConfigSpace>=0.4.0
 openml
